k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: argocd
spec:
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
